Se estan realizando los comentarios de los estilos realizados en el archivo style.css

--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
             <div class="date">
                 <!--este contenedor que esta contenido en Month, que esta en Calendar, cuenta con información en el h1 (el mes) y el parrafo (la fecha)-->
                 <h1></h1>
+                <!--Los elementos de encabezado implementan seis niveles de encabezado del documento, <h1> es el más importante-->
                 <p></p>
+                <!--El elemento p (párrafo) es el apropiado para distribuir el texto en párrafos.-->
             </div>
             <i class="fas fa-angle-right next"></i>
+            <!--este contenedor que esta contenido en Month, que esta en Calendar, cuenta con información en el h1 (el mes) y el parrafo (la fecha)-->
         </div>
+        <!--cierra el contenedor month-->
         <div class="weekday">
+            <!--inicia el contenedor weekday, el cual inicia a trabajar los dias de la semana-->
             <div>Sun</div>
+            <!--contenedor que contiene el dia Domingo...y asi-->
             <div>Mon</div>
             <div>Tue</div>
             <div>Wed</div>
@@ -34,14 +40,20 @@
             <div>Fri</div>
             <div>Sat</div>
         </div>
+        <!--cierra el contenedor dias de la semana-->
         <div class="days">
+            <!--inicia el contenedor dias numericos y su relacion con los weekdays, -->
         </div>
+        <!--cierra el contenedor dias numericos de la semana-->
     </div>
+    <!--cierra el contenedor calendar principal-->
 </div>
+<!--cierra el contenedor principal donde todos los demás contenedores estan agrupados-->
 
 
 <body>
     <script src="script.js"></script>
+    <!--llama el archivo donde esta la lógica del proyecto en JS-->
 </body>
 
 </html>
